--- a/FRONTEND/snapnote/src/Styles/HomePage.css
+++ b/FRONTEND/snapnote/src/Styles/HomePage.css
@@ -1,5 +1,6 @@
-/* Default button styling */
+/* Button Styling */
 .add-new-notes-btn {
-    float: right;
+    position: fixed;
+    top: 20px;
+    right: 20px;
 }
-
