--- a/FRONTEND/snapnote/src/Styles/HomePage.css
+++ b/FRONTEND/snapnote/src/Styles/HomePage.css
@@ -4,3 +4,16 @@
     top: 20px;
     right: 20px;
 }
+
+.app-name {
+    font-family: Lobster;
+    text-align: center;
+    font-size: 60px;
+}
+
+.app-tagline {
+    text-align: center;
+    font-family:monospace;
+    font-style: italic;
+    font-size: 30px;
+}
