--- a/FRONTEND/snapnote/src/Styles/AddForm.css
+++ b/FRONTEND/snapnote/src/Styles/AddForm.css
@@ -1,46 +1,75 @@
-.add-form-body {
+/* Base styling */
+.add-form-body, .text-area, #title-input {
     font-family: 'Poppins';
 }
 
+/* Textarea styling */
 textarea {
     width: 100%;
-    height: 150px;
+    height: 400px;
     padding: 12px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
-  }
+}
 
+/* Responsive typography */
 .text-area {
     font-size: 16px;
-    font-family: 'Poppins';
-  }
+}
 
-  .add-note-heading {
+.add-note-heading {
     text-align: center;
-  }
+}
 
-  body {
-    background-color: #f0e130;
-  }
+/* Main form box */
+.add-form-box {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
-  .add-form-box {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 150px;
-    padding-right: 150px;
-  }
+/* Container for the form box */
+.box-container {
+    background-color: #f7d560;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid #ccc;
+}
 
-  .box-container {
-    background-color: #B2BEB5;
-    padding: 50px;
-    border-radius: 50px;
+/* Responsive padding */
+.padding-div {
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
-  }
+/* Media Queries for Responsiveness */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .add-form-box {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
 
-  #title-input {
-    font-size: 16px;
-    font-family: 'Poppins';
-  }
+    .box-container {
+        border-radius: 30px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .add-form-box {
+        padding-left: 150px;
+        padding-right: 150px;
+    }
+
+    #title-input {
+        font-size: 18px;
+    }
+
+    .text-area {
+        font-size: 18px;
+    }
+}
