--- a/FRONTEND/snapnote/src/Styles/HomePage.css
+++ b/FRONTEND/snapnote/src/Styles/HomePage.css
@@ -13,7 +13,7 @@
 
 .app-tagline {
     text-align: center;
-    font-family:monospace;
+    font-family:'Poppins';
     font-style: italic;
-    font-size: 30px;
+    font-size: 20px;
 }
