--- a/FRONTEND/snapnote/src/Styles/HomePage.css
+++ b/FRONTEND/snapnote/src/Styles/HomePage.css
@@ -97,6 +97,7 @@
 
 /* Textarea styling */
 .content-textarea {
+  height: 650px;
   font-size: 20px;
   font-family: 'Poppins';
 }
@@ -134,4 +135,15 @@ input[type="text"] {
   top: 242px;
   right: 80px;
   display: flex;
+}
+
+/* Adjust the width of the input and textarea within card2 */
+.card2 input[type="text"],
+.card2 textarea {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%; /* You can adjust this value as needed */
+  max-width: 800px; /* Set a maximum width to prevent excessive expansion */
+  box-sizing: border-box; /* Include padding and border in the total width */
 }
