--- a/FRONTEND/snapnote/src/Styles/AddForm.css
+++ b/FRONTEND/snapnote/src/Styles/AddForm.css
@@ -1,109 +1,111 @@
 /* Base styling */
-.add-form-body, .text-area, #title-input {
-    font-family: 'Poppins';
+.add-form-body,
+.text-area,
+#title-input {
+  font-family: "Poppins";
 }
 
 /* Textarea styling */
 textarea {
-    width: 100%;
-    height: 400px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    resize: none;
+  width: 100%;
+  height: 400px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
 }
 
 /* Responsive typography */
 .text-area {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .add-note-heading {
-    text-align: center;
+  text-align: center;
 }
 
 /* Main form box */
 .add-form-box {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* Container for the form box */
 .box-container {
-    background-color: #f7d560;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    border: 1px solid #ccc;
+  background-color: #f7d560;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ccc;
 }
 
 /* Responsive padding */
 .padding-div {
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* Media Queries for Responsiveness */
 @media (min-width: 768px) and (max-width: 1023px) {
-    .add-form-box {
-        padding-left: 60px;
-        padding-right: 60px;
-    }
+  .add-form-box {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 
-    .box-container {
-        border-radius: 30px;
-    }
+  .box-container {
+    border-radius: 30px;
+  }
 }
 
 @media (min-width: 1024px) {
-    .add-form-box {
-        padding-left: 150px;
-        padding-right: 150px;
-    }
+  .add-form-box {
+    padding-left: 150px;
+    padding-right: 150px;
+  }
 
-    #title-input {
-        font-size: 18px;
-    }
+  #title-input {
+    font-size: 18px;
+  }
 
-    .text-area {
-        font-size: 18px;
-    }
+  .text-area {
+    font-size: 18px;
+  }
 }
 
 /* Responsive buttons */
 .btn-div {
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .btns-in-add-form {
-    display: inline-block;
-    padding: 10px 15px;
-    font-size: 20px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: #355e3b;
-    border: none;
-    border-radius: 10px;
-    margin-right: 20px; /* Add space between buttons */
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #355e3b;
+  border: none;
+  border-radius: 10px;
+  margin-right: 20px; /* Add space between buttons */
 }
 
 .btns-in-add-form:hover {
-    background-color: #008080;
+  background-color: #008080;
 }
 
 /* Media Queries for Responsiveness */
 @media (max-width: 767px) {
-    .btns-in-add-form {
-        margin-right: 0; /* Reset margin for smaller screens */
-        margin-bottom: 10px; /* Add vertical space between buttons */
-    }
+  .btns-in-add-form {
+    margin-right: 0; /* Reset margin for smaller screens */
+    margin-bottom: 10px; /* Add vertical space between buttons */
+  }
 }
